# POC-workflow-temporalio

./: README.md  pyproject.toml  requirements.txt
etl/: main.py  worker_main.py  workflow_main.py
etl/activity/: api_activities.py  sftp_activities.py
etl/config/: config.py
etl/entity/: sftp_properties.py
etl/repository/: sftp.py  star_wars_api.py
etl/workflows/: sftp_workflow.py  star_wars_workflow.py
hello_world/: README.md  greeting_workflow.py  hello_world_main.py
hello_world/activity/: compose_greeting_activity.py
hello_world/workflow/: greeting_workflow.py
sftp/: Dockerfile  README.md  run_sftp_server.bat  run_sftp_server.sh
sftp_api_process/: README.md  worker_main.py  workflow_main.py
sftp_api_process/activity/: api_activities.py  sftp_activities.py
sftp_api_process/config/: config.py
sftp_api_process/repository/: sftp.py  star_wars_api.py
sftp_api_process/workflows/: sftp_workflow.py  star_wars_workflow.py
tests/hello_world/: greeting_workflow_test.py
tests/hello_world/activity/: compose_greeting_activity_test.py
tests/sftp_api_process/: sftp_workflow_test.py
workflow-temporalio/: main.py
workflow-temporalio/hello_world/: compose_greeting_activity.py
workflow-temporalio/scheduled_hello_world/: README.md  hello_world_main.py
